--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
           </ul>
         </nav>
-        
+
         <ul class="header-contacts list">
           <li class="header-contacts__item">
             <a href="mailto:info@devstudio.com" class="header-contacts__link link">
@@ -163,7 +163,7 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team-card list">
             <li class="team-card__item">
-              <img                 
+              <img
                 class="team-card__img"
                 src="./images/team-img-1-min.jpg"
                 alt="Игорь Демьяненко"
@@ -203,17 +203,18 @@
                 </li>
               </ul>
             </li>
+
             <li class="team-card__item">
               <img
                 class="team-card__img"
                 src="./images/team-img-2-min.jpg"
-                alt="Ольга Репина"
+                alt="Игорь Демьяненко"
                 width="270"
                 height="260"
               />
               <h3 class="team-card__title">Ольга Репина</h3>
               <p class="team-card__text">Frontend Developer</p>
-              <ul class="soc__list soc__list--team list">
+              <ul class="soc soc__list--team list">
                 <li class="soc__item">
                   <a href="" class="soc__link soc__link--team link">
                     <svg class="soc__icon soc__icon--team" width="20px" height="20px">
@@ -244,17 +245,18 @@
                 </li>
               </ul>
             </li>
+
             <li class="team-card__item">
               <img
                 class="team-card__img"
                 src="./images/team-img-3-min.jpg"
-                alt="Николай Тарасов"
+                alt="Игорь Демьяненко"
                 width="270"
                 height="260"
               />
               <h3 class="team-card__title">Николай Тарасов</h3>
               <p class="team-card__text">Marketing</p>
-              <ul class="soc__list soc__list--team list">
+              <ul class="soc soc__list--team list">
                 <li class="soc__item">
                   <a href="" class="soc__link soc__link--team link">
                     <svg class="soc__icon soc__icon--team" width="20px" height="20px">
@@ -285,17 +287,18 @@
                 </li>
               </ul>
             </li>
+
             <li class="team-card__item">
               <img
                 class="team-card__img"
                 src="./images/team-img-4-min.jpg"
-                alt="Михаил Ермаков"
+                alt="Игорь Демьяненко"
                 width="270"
                 height="260"
               />
               <h3 class="team-card__title">Михаил Ермаков</h3>
               <p class="team-card__text">UI Designer</p>
-              <ul class="soc__list soc__list--team list">
+              <ul class="soc soc__list--team list">
                 <li class="soc__item">
                   <a href="" class="soc__link soc__link--team link">
                     <svg class="soc__icon soc__icon--team" width="20px" height="20px">
@@ -399,14 +402,10 @@
                 >
               </li>
               <li class="address__item">
-                <a class="address__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="address__link link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="address__item">
-                <a class="address__link link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+                <a class="address__link link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -483,7 +482,13 @@
           <div class="registration-form__field">
             <label for="user-name" class="registration-form__title">Имя</label>
             <div class="registration-form__wrap">
-              <input type="text" id="user-name" class="registration-form__input" name="user-name" required />
+              <input
+                type="text"
+                id="user-name"
+                class="registration-form__input"
+                name="user-name"
+                required
+              />
               <svg class="registration-form__icon" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-person-modal"></use>
               </svg>
@@ -493,7 +498,13 @@
           <div class="registration-form__field">
             <label for="user-tel" class="registration-form__title">Телефон</label>
             <div class="registration-form__wrap">
-              <input id="user-tel" type="tel" class="registration-form__input" name="user-tel" required />
+              <input
+                id="user-tel"
+                type="tel"
+                class="registration-form__input"
+                name="user-tel"
+                required
+              />
               <svg class="registration-form__icon" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-phone-modal"></use>
               </svg>
@@ -503,7 +514,12 @@
           <div class="registration-form__field">
             <label for="user-email" class="registration-form__title">Почта</label>
             <div class="registration-form__wrap">
-              <input id="user-email" type="email" class="registration-form__input" name="user-email" />
+              <input
+                id="user-email"
+                type="email"
+                class="registration-form__input"
+                name="user-email"
+              />
               <svg class="registration-form__icon" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-email-modal"></use>
               </svg>
