--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo header__logo logo--black link"
@@ -61,7 +61,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="section hero">
@@ -123,7 +123,7 @@
         </div>
       </section>
 
-      <section class="section about">
+      <!-- <section class="section about">
         <div class="container">
           <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list">
@@ -156,9 +156,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team-card list">
@@ -331,7 +331,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <section class="section clients">
         <div class="container">
@@ -384,7 +384,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="address-container">
           <a href="./index.html" class="logo footer__logo logo--white link"
@@ -448,7 +448,6 @@
         <div class="subscription-container">
           <p class="subscription__title">Подпишитесь на рассылку</p>
           <form class="subscription-form">
-            <!-- <label for="user-telegram" class="footer-subscription-label"></label> -->
             <input
               id="user-telegram"
               type="email"
@@ -466,7 +465,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <!-- is-hidden -->
