--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo header__logo logo--black link"
@@ -61,7 +61,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="section portfolio">
