--- a/portfolio.html
+++ b/portfolio.html
@@ -90,13 +90,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-1.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-1.jpg 1x, ./images/img-portfolio-1-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-1-tab.jpg 1x, ./images/img-portfolio-1-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-1-mob.jpg 1x, ./images/img-portfolio-1-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-1.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -113,13 +127,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-2.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-2.jpg 1x, ./images/img-portfolio-2-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-2-tab.jpg 1x, ./images/img-portfolio-2-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-2-mob.jpg 1x, ./images/img-portfolio-2-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-2.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -136,13 +164,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-3.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-3.jpg 1x, ./images/img-portfolio-3-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-3-tab.jpg 1x, ./images/img-portfolio-3-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-3-mob.jpg 1x, ./images/img-portfolio-3-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-3.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -159,13 +201,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-4.jpg"
-                    alt="Проект Prime"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-4.jpg 1x, ./images/img-portfolio-4-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-4-tab.jpg 1x, ./images/img-portfolio-4-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-4-mob.jpg 1x, ./images/img-portfolio-4-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-4.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -182,13 +238,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-5.jpg"
-                    alt="Проект Boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-5.jpg 1x, ./images/img-portfolio-5-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-5-tab.jpg 1x, ./images/img-portfolio-5-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-5-mob.jpg 1x, ./images/img-portfolio-5-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-5.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -205,13 +275,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-6.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-6.jpg 1x, ./images/img-portfolio-6-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-6-tab.jpg 1x, ./images/img-portfolio-6-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-6-mob.jpg 1x, ./images/img-portfolio-6-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-6.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -228,13 +312,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-7.jpg"
-                    alt="Издание Limited Edition"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-7.jpg 1x, ./images/img-portfolio-7-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-7-tab.jpg 1x, ./images/img-portfolio-7-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-7-mob.jpg 1x, ./images/img-portfolio-7-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-7.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -251,13 +349,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-8.jpg"
-                    alt="Проект LAB"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-8.jpg 1x, ./images/img-portfolio-8-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-8-tab.jpg 1x, ./images/img-portfolio-8-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-8-mob.jpg 1x, ./images/img-portfolio-8-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-8.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -274,13 +386,27 @@
             <li class="card__item">
               <a href="#" class="card__link link">
                 <div class="card-overlay">
-                  <img
-                    class="card-overlay__img"
-                    src="./images/img-portfolio-9.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/img-portfolio-9.jpg 1x, ./images/img-portfolio-9-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-9-tab.jpg 1x, ./images/img-portfolio-9-tab-2x.jpg 2x"
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="./images/img-portfolio-9-mob.jpg 1x, ./images/img-portfolio-9-mob-2x.jpg 2x"
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      class="card-overlay__img"
+                      src="./images/img-portfolio-9.jpg"
+                      alt="Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="card-overlay__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
