--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo header__logo logo--black link"
@@ -60,8 +60,93 @@
             </a>
           </li>
         </ul>
+
+        <button type="button" class="menu-open-btn btn">
+          <svg class="menu-open-btn__menu-icon" width="40px" height="40px">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+
+      <div class="mob-menu">
+        <div class="container mob-menu-container">
+          <button type="button" class="menu-close-btn btn">
+            <svg class="menu-close-btn__menu-icon" width="40px" height="40px">
+              <use href="./images/icons.svg#icon-menu-close"></use>
+            </svg>
+          </button>
+          <nav class="mob-menu-navigation">
+            <ul class="mob-menu-nav list">
+              <li class="mob-menu-nav__item">
+                <a href="./index.html" class="mob-menu-nav__link link current-link">Студия</a>
+              </li>
+              <li class="mob-menu-nav__item">
+                <a href="./portfolio.html" class="mob-menu-nav__link link">Портфолио</a>
+              </li>
+              <li class="mob-menu-nav__item">
+                <a href="" class="mob-menu-nav__link link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="mob-menu-contacts list">
+            <li class="mob-menu-contacts__item">
+              <a href="mailto:info@devstudio.com" class="mob-menu-contacts__link link">
+                <svg class="mob-menu-contacts__icon" width="16px" height="12px">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="mob-menu-contacts__item">
+              <a href="tel:+380961111111" class="mob-menu-contacts__link link">
+                <svg class="mob-menu-contacts__icon" width="16px" height="12px">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+          <ul class="mob-menu-soc list">
+            <li class="mob-menu-soc__item">
+              <a
+                href=""
+                class="mob-menu-soc__link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Instagram
+              </a>
+            </li>
+            <li class="mob-menu-soc__item">
+              <a
+                href=""
+                class="mob-menu-soc__link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Twitter
+              </a>
+            </li>
+            <li class="mob-menu-soc__item">
+              <a
+                href=""
+                class="mob-menu-soc__link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Facebook
+              </a>
+            </li>
+            <li class="mob-menu-soc__item">
+              <a
+                href=""
+                class="mob-menu-soc__link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >LinkedIn
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
     <main>
       <section class="section hero">
@@ -128,30 +213,15 @@
           <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list">
             <li class="about__item">
-              <img
-                src="./images/img-1-min.jpg"
-                alt="Наш род деятельности"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-1.jpg" alt="Наш род деятельности" width="370" height="294" />
               <p class="about__text">Десктопные приложения</p>
             </li>
             <li class="about__item">
-              <img
-                src="./images/img-2-min.jpg"
-                alt="Наш род деятельности"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-2.jpg" alt="Наш род деятельности" width="370" height="294" />
               <p class="about__text">Десктопные приложения</p>
             </li>
             <li class="about__item">
-              <img
-                src="./images/img-3-min.jpg"
-                alt="Наш род деятельности"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-3.jpg" alt="Наш род деятельности" width="370" height="294" />
               <p class="about__text">Десктопные приложения</p>
             </li>
           </ul>
@@ -163,13 +233,27 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team-card list">
             <li class="team-card__item">
-              <img
-                class="team-card__img"
-                src="./images/team-img-1-min.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-img-1.jpg 1x, ./images/team-img-1-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/team-img-1-tab.jpg 1x, ./images/team-img-1-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team-img-1-mob.jpg 1x, ./images/team-img-1-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  class="team-card__img"
+                  src="./images/team-img-1.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <h3 class="team-card__title">Игорь Демьяненко</h3>
               <p class="team-card__text">Product Designer</p>
               <ul class="soc soc__list--team list">
@@ -205,13 +289,27 @@
             </li>
 
             <li class="team-card__item">
-              <img
-                class="team-card__img"
-                src="./images/team-img-2-min.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-img-2.jpg 1x, ./images/team-img-2-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/team-img-2-tab.jpg 1x, ./images/team-img-2-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team-img-2-mob.jpg 1x, ./images/team-img-2-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  class="team-card__img"
+                  src="./images/team-img-2.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <h3 class="team-card__title">Ольга Репина</h3>
               <p class="team-card__text">Frontend Developer</p>
               <ul class="soc soc__list--team list">
@@ -247,13 +345,27 @@
             </li>
 
             <li class="team-card__item">
-              <img
-                class="team-card__img"
-                src="./images/team-img-3-min.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-img-3.jpg 1x, ./images/team-img-3-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/team-img-3-tab.jpg 1x, ./images/team-img-3-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team-img-3-mob.jpg 1x, ./images/team-img-3-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  class="team-card__img"
+                  src="./images/team-img-3.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <h3 class="team-card__title">Николай Тарасов</h3>
               <p class="team-card__text">Marketing</p>
               <ul class="soc soc__list--team list">
@@ -289,13 +401,27 @@
             </li>
 
             <li class="team-card__item">
-              <img
-                class="team-card__img"
-                src="./images/team-img-4-min.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-img-4.jpg 1x, ./images/team-img-4-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/team-img-4-tab.jpg 1x, ./images/team-img-4-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team-img-4-mob.jpg 1x, ./images/team-img-4-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  class="team-card__img"
+                  src="./images/team-img-4.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <h3 class="team-card__title">Михаил Ермаков</h3>
               <p class="team-card__text">UI Designer</p>
               <ul class="soc soc__list--team list">
@@ -479,60 +605,68 @@
 
         <form class="registration-form">
           <div class="registration-form__field">
-            <label for="user-name" class="registration-form__title">Имя</label>
-            <div class="registration-form__wrap">
-              <input
-                type="text"
-                id="user-name"
-                class="registration-form__input"
-                name="user-name"
-                required
-              />
-              <svg class="registration-form__icon" width="18px" height="18px">
-                <use href="./images/icons.svg#icon-person-modal"></use>
-              </svg>
-            </div>
+            <label for="user-name" class="registration-form__title"
+              >Имя
+              <div class="registration-form__wrap">
+                <input
+                  type="text"
+                  id="user-name"
+                  class="registration-form__input"
+                  name="user-name"
+                  required
+                />
+                <svg class="registration-form__icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#icon-person-modal"></use>
+                </svg>
+              </div>
+            </label>
           </div>
 
           <div class="registration-form__field">
-            <label for="user-tel" class="registration-form__title">Телефон</label>
-            <div class="registration-form__wrap">
-              <input
-                id="user-tel"
-                type="tel"
-                class="registration-form__input"
-                name="user-tel"
-                required
-              />
-              <svg class="registration-form__icon" width="18px" height="18px">
-                <use href="./images/icons.svg#icon-phone-modal"></use>
-              </svg>
-            </div>
+            <label for="user-tel" class="registration-form__title"
+              >Телефон
+              <div class="registration-form__wrap">
+                <input
+                  id="user-tel"
+                  type="tel"
+                  class="registration-form__input"
+                  name="user-tel"
+                  required
+                />
+                <svg class="registration-form__icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#icon-phone-modal"></use>
+                </svg>
+              </div>
+            </label>
           </div>
 
           <div class="registration-form__field">
-            <label for="user-email" class="registration-form__title">Почта</label>
-            <div class="registration-form__wrap">
-              <input
-                id="user-email"
-                type="email"
-                class="registration-form__input"
-                name="user-email"
-              />
-              <svg class="registration-form__icon" width="18px" height="18px">
-                <use href="./images/icons.svg#icon-email-modal"></use>
-              </svg>
-            </div>
+            <label for="user-email" class="registration-form__title"
+              >Почта
+              <div class="registration-form__wrap">
+                <input
+                  id="user-email"
+                  type="email"
+                  class="registration-form__input"
+                  name="user-email"
+                />
+                <svg class="registration-form__icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#icon-email-modal"></use>
+                </svg>
+              </div>
+            </label>
           </div>
 
           <div class="registration-form__field registration-form__field--user-comment">
-            <label for="user-comment" class="registration-form__title">Комментарий</label>
-            <textarea
-              name="user-comment"
-              id="user-comment"
-              class="registration-form__comment"
-              placeholder="Введите текст"
-            ></textarea>
+            <label for="user-comment" class="registration-form__title"
+              >Комментарий
+              <textarea
+                name="user-comment"
+                id="user-comment"
+                class="registration-form__comment"
+                placeholder="Введите текст"
+              ></textarea>
+            </label>
           </div>
 
           <div class="modal-checkbox">
