--- a/index.html
+++ b/index.html
@@ -61,89 +61,90 @@
           </li>
         </ul>
 
-        <button type="button" class="menu-open-btn btn">
+        <button type="button" class="menu-open-btn btn" data-menu-open>
           <svg class="menu-open-btn__menu-icon" width="40px" height="40px">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
 
-      <div class="mob-menu">
+      <div class="mob-menu is-hidden" data-menu>
         <div class="container mob-menu-container">
-          <button type="button" class="menu-close-btn btn">
-            <svg class="menu-close-btn__menu-icon" width="40px" height="40px">
-              <use href="./images/icons.svg#icon-menu-close"></use>
-            </svg>
-          </button>
-          <nav class="mob-menu-navigation">
-            <ul class="mob-menu-nav list">
-              <li class="mob-menu-nav__item">
-                <a href="./index.html" class="mob-menu-nav__link link current-link">Студия</a>
+          <div>
+            <button type="button" class="menu-close-btn btn" data-menu-close>
+              <svg class="menu-close-btn__menu-icon" width="40px" height="40px">
+                <use href="./images/icons.svg#icon-menu-close"></use>
+              </svg>
+            </button>
+            <nav class="mob-menu-navigation">
+              <ul class="mob-menu-nav list">
+                <li class="mob-menu-nav__item">
+                  <a href="./index.html" class="mob-menu-nav__link link current-link">Студия</a>
+                </li>
+                <li class="mob-menu-nav__item">
+                  <a href="./portfolio.html" class="mob-menu-nav__link link">Портфолио</a>
+                </li>
+                <li class="mob-menu-nav__item">
+                  <a href="" class="mob-menu-nav__link link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <ul class="mob-menu-contacts list">
+              <li class="mob-menu-contacts__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mob-menu-contacts__link link mob-menu-contacts__link--blue"
+                >
+                  +38 096 111 11 11
+                </a>
               </li>
-              <li class="mob-menu-nav__item">
-                <a href="./portfolio.html" class="mob-menu-nav__link link">Портфолио</a>
-              </li>
-              <li class="mob-menu-nav__item">
-                <a href="" class="mob-menu-nav__link link">Контакты</a>
+              <li class="mob-menu-contacts__item">
+                <a href="mailto:info@devstudio.com" class="mob-menu-contacts__link link">
+                  info@devstudio.com
+                </a>
               </li>
             </ul>
-          </nav>
-          <ul class="mob-menu-contacts list">
-            <li class="mob-menu-contacts__item">
-              <a href="mailto:info@devstudio.com" class="mob-menu-contacts__link link">
-                <svg class="mob-menu-contacts__icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="mob-menu-contacts__item">
-              <a href="tel:+380961111111" class="mob-menu-contacts__link link">
-                <svg class="mob-menu-contacts__icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-          <ul class="mob-menu-soc list">
-            <li class="mob-menu-soc__item">
-              <a
-                href=""
-                class="mob-menu-soc__link link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >Instagram
-              </a>
-            </li>
-            <li class="mob-menu-soc__item">
-              <a
-                href=""
-                class="mob-menu-soc__link link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >Twitter
-              </a>
-            </li>
-            <li class="mob-menu-soc__item">
-              <a
-                href=""
-                class="mob-menu-soc__link link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >Facebook
-              </a>
-            </li>
-            <li class="mob-menu-soc__item">
-              <a
-                href=""
-                class="mob-menu-soc__link link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >LinkedIn
-              </a>
-            </li>
-          </ul>
+            <ul class="mob-menu-soc list">
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -694,6 +695,7 @@
         </form>
       </div>
     </div>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
