--- a/index.html
+++ b/index.html
@@ -608,7 +608,8 @@
           <div class="registration-form__field">
             <label for="user-name" class="registration-form__title"
               >Имя
-              <div class="registration-form__wrap">
+              <span class="registration-form__wrap">
+                <!-- <div class="registration-form__wrap"> -->
                 <input
                   type="text"
                   id="user-name"
@@ -619,14 +620,16 @@
                 <svg class="registration-form__icon" width="18px" height="18px">
                   <use href="./images/icons.svg#icon-person-modal"></use>
                 </svg>
-              </div>
+                <!-- </div> -->
+              </span>
             </label>
           </div>
 
           <div class="registration-form__field">
             <label for="user-tel" class="registration-form__title"
               >Телефон
-              <div class="registration-form__wrap">
+              <span class="registration-form__wrap">
+                <!-- <div class="registration-form__wrap"> -->
                 <input
                   id="user-tel"
                   type="tel"
@@ -637,14 +640,16 @@
                 <svg class="registration-form__icon" width="18px" height="18px">
                   <use href="./images/icons.svg#icon-phone-modal"></use>
                 </svg>
-              </div>
+                <!-- </div> -->
+              </span>
             </label>
           </div>
 
           <div class="registration-form__field">
             <label for="user-email" class="registration-form__title"
               >Почта
-              <div class="registration-form__wrap">
+              <span class="registration-form__wrap">
+                <!-- <div class="registration-form__wrap"> -->
                 <input
                   id="user-email"
                   type="email"
@@ -654,7 +659,8 @@
                 <svg class="registration-form__icon" width="18px" height="18px">
                   <use href="./images/icons.svg#icon-email-modal"></use>
                 </svg>
-              </div>
+                <!-- </div> -->
+              </span>
             </label>
           </div>
 
