--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </li>
           <li class="header-contacts__item">
             <a href="tel:+380961111111" class="header-contacts__link link">
-              <svg class="header-contacts__icon" width="16px" height="12px">
+              <svg class="header-contacts__icon header-contacts__icon--tel" width="10px" height="14px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
